force-app/main/default/objects/Application_Meta_Data__c/Application_Meta_Data__c.object-meta.xml
<CustomObject>
    <label>Application Meta Data</label>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Meta Data</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>