force-app/main/default/objects/Application_Meta_Data__c/fields/Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_ID__c</fullName>
    <displayFormat>A-{000000}</displayFormat>
    <label>Application ID</label>
    <type>AutoNumber</type>
</CustomField>