force-app/main/default/objects/Application_Meta_Data__c/fields/AppMetaId__c.field-meta.xml
<CustomField>
    <fullName>AppMetaId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>AppMetaId</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>