force-app/main/default/objects/Application_Meta_Data__c/fields/Client_Response_Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Response_Email_Template_Name__c</fullName>
    <description>This is the template name of the email that has to to be sent to the client after successful submission. Leave this blank if no email response is to be send</description>
    <inlineHelpText>This is the template name of the email that has to to be sent to the client after successful submission. Leave this blank if no email response is to be send</inlineHelpText>
    <label>Client Response Email Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>