force-app/main/default/objects/Application_Meta_Data__c/fields/Debug_Email__c.field-meta.xml
<CustomField>
    <fullName>Debug_Email__c</fullName>
    <inlineHelpText>If debug is on, this email address will receive debug info and errors</inlineHelpText>
    <label>Debug Email</label>
    <type>Email</type>
</CustomField>