force-app/main/default/objects/Application_Meta_Data__c/fields/Debug_Mode__c.field-meta.xml
<CustomField>
    <fullName>Debug_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debug Mode</label>
    <type>Checkbox</type>
</CustomField>