force-app/main/default/objects/Application_Meta_Data__c/fields/FormData__c.field-meta.xml
<CustomField>
    <fullName>FormData__c</fullName>
    <label>Form Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>