force-app/main/default/objects/Application_Meta_Data__c/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <description>This field needs to be set if any child objects are going to be created as part of the form submission</description>
    <inlineHelpText>This field needs to be set if any child objects are going to be created as part of the form submission</inlineHelpText>
    <label>Parent Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>