force-app/main/default/objects/Application_Meta_Data__c/validationRules/valid_email_for_debug.validationRule-meta.xml
<ValidationRule>
    <fullName>valid_email_for_debug</fullName>
    <active>true</active>
    <errorConditionFormula>IF ( Debug_Mode__c &amp;&amp;  ISBLANK(Debug_Email__c), true, false )</errorConditionFormula>
    <errorDisplayField>Debug_Email__c</errorDisplayField>
    <errorMessage>If Debug mode is on, an Email address is required</errorMessage>
</ValidationRule>