force-app/main/default/objects/Application_Meta_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Label__c</columns>
    <columns>Section__c</columns>
    <columns>AppMetaId__c</columns>
    <columns>Parent_Object__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>